[project]
name = "prepare-workload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mako>=1.3.10",
    "pydantic-settings>=2.11.0",
    "typer>=0.19.2",
    "xrpl-py>=4.3.0",
]

# [project.scripts]
# prep = "prepare_workload:main"
