[project]
name = "prepare-workload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mako>=1.3.10",
    "xrpl-py>=4.3.0",
]

# [project.scripts]
# prep = "prepare_workload:main"

[dependency-groups]
dev = [
    "ruff>=0.14.2",
]

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = [
    "D",
    "E4",
    "E7",
    "E9",
    "F",
    ]

ignore = [
    "D100",
    "D103",
    "D212",
    # "D213",
]
