[project]
name = "workload"
version = "0.1.1"
description = "Add your description here"
authors = [
    { name = "Michael Legleux", email = "mlegleux@ripple.com" }
]
dependencies = [
    "xrpl-py",
    "antithesis>=0.1.17",
    "requests>=2.32.4",
    "anyio>=4.9.0",
    "ruamel-yaml>=0.18.14",
    "fastapi[standard]>=0.116.1",
    "uvicorn>=0.35.0",
]
readme = "README.md"
requires-python = ">= 3.13"
license = { text = "MIT" }

[project.scripts]
# workload = "workload.app:main"
workload = "workload:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py313"
line-length = 120
# select = [
#     "ANN201", # methods must have return types
#     "COM812", # Remove whenever Ruff formatter being used
# ]
exclude = [
    ".git",
]

[tool.ruff.lint]
select = [
    "ANN201", # methods must have return types
    "COM812", # Remove whenever Ruff formatter being used
    "E",
    "F",

]
extend-select = [
    "I",
    # "B",
    # "Q",
    ]
ignore = []


# [tool.uv.sources]
# xrpl-py = { path = "../../xrpl-py" }
# legleux-generate-ledger = { path = "../../generate_ledger"}
