[project]
name = "workload"
version = "0.1.0"
description = "XRPL transaction traffic generator for Antithesis testing of xrpld"
authors = [
    { name = "Michael Legleux", email = "mlegleux@ripple.com" }
]
dependencies = [
    "xrpl-py",
    "requests>=2.32.4",
    "anyio>=4.9.0",
    "ruamel-yaml>=0.18.14",
    "fastapi[standard]>=0.116.1",
    "uvicorn[standard]>=0.35.0",
    "names>=0.3.0",
    "asyncio>=4.0.0",
    "pydantic-settings>=2.11.0",
    "pynacl>=1.5.0",
]
readme = "README.md"
requires-python = ">= 3.13"
license = { text = "MIT" }

[project.scripts]
workload = "workload.__main__:main"

[build-system]
requires = ["uv_build>=0.8.19,<0.9.0"]
build-backend = "uv_build"

[tool.uv_build.build.targets.sdist]
include = [
  "src/workload",
  "src/workload/templates/**",
  "pyproject.toml",
  "README.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-rP --tb=short -m 'not mutating and not reset'"
markers = [
    "mutating: tests that submit transactions or toggle workload state (deselected by default)",
    "reset: tests that reset the network (deselected by default, very destructive)",
]

[tool.ruff]
line-length = 120
target-version = "py313"
exclude = [
    ".git",
]
lint.select = [
    "ANN201", # methods must have return types
    "B",
    "E",
    "F",
    # "D",
    "Q",
]

# lint.extend-select = ["D"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.uv.sources]
generate-ledger = { path = "../../generate_ledger", editable = true }

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
    "complexipy>=5.2.0",
    "radon>=6.0.1",
]
lint = [
    "pre-commit>=4.3.0",
    "ruff>=0.14.1",
]
antithesis = [
    "antithesis>=0.2.0",
]
gen = [
    "generate-ledger",
]
test = [
    "pytest>=8.4",
    "pytest-cov>=6.0",
    "httpx>=0.28",
]
